--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.16.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "@fortune-sheet/core": "^0.19.5",
+    "@fortune-sheet/react": "^0.19.5",
+    "antd": "^5.16.4",
+    "exceljs": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.24",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -28,6 +29,6 @@
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.8"
+    "vite": "^5.2.10"
   }
 }
