--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "remote": "pnpm -F remote dev",
+    "host": "pnpm -F host dev",
+    "bootstrap": "lerna bootstrap",
+    "clean": "lerna clean && rimraf ./node_modules"
+  },
   "dependencies": {},
   "devDependencies": {
     "lerna": "^8.1.9"
