--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -24,6 +24,7 @@
     "globals": "^15.13.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-federation": "^0.0.1"
   }
 }
