--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@originjs/vite-plugin-federation": "^1.3.6",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -24,7 +25,6 @@
     "globals": "^15.13.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.3",
-    "vite-plugin-federation": "^0.0.1"
+    "vite": "^6.0.3"
   }
 }
