--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "remote": "pnpm -F remote dev",
+    "remote": "pnpm -F remote build && pnpm -F remote run preview",
     "host": "pnpm -F host dev",
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean && rimraf ./node_modules"
