--- a/packages/app1/package.json
+++ b/packages/app1/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "qiankun": "^2.10.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -25,6 +26,7 @@
     "postcss-prefix-selector": "^2.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-qiankun": "^1.0.15"
   }
 }
