--- a/packages/app2/package.json
+++ b/packages/app2/package.json
@@ -25,6 +25,7 @@
     "postcss-prefix-selector": "^2.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-qiankun": "^1.0.15"
   }
 }
