--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "qiankun": "^2.10.16",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
