--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react-flow",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc -b && vite build",
+    "clean": "npx rimraf node_modules",
+    "dev": "vite",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "clean": "npx rimraf node_modules"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@xyflow/react": "^12.6.4",
@@ -27,6 +27,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-packagejson": "^2.5.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "5.4.11"
