--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "qiankun": "^2.10.16",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
