--- a/packages/app1/package.json
+++ b/packages/app1/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.6.2",
+    "vite-plugin-qiankun-lite": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
