--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -28,6 +28,7 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "5.4.11"
+    "vite": "5.4.11",
+    "vite-plugin-externals": "^0.6.2"
   }
 }
