--- a/packages/app/.env
+++ b/packages/app/.env
@@ -1,3 +1,3 @@
 VITE_PORT=8000
-VITE_REACT_FILE_PATH=https://unpkg.com/react@18.3.1/umd/react.development.js
-VITE_REACT_DOM_FILE_PATH=https://unpkg.com/react-dom@18.3.1/umd/react-dom.development.js
+VITE_REACT_FILE_PATH=/react@18.3.1/react.development.js
+VITE_REACT_DOM_FILE_PATH=/react-dom@18.3.1/react-dom.development.js
