--- a/packages/app/.env.production
+++ b/packages/app/.env.production
@@ -1,2 +1,2 @@
-VITE_REACT_FILE_PATH=https://unpkg.com/react@18.3.1/umd/react.production.min.js
-VITE_REACT_DOM_FILE_PATH=https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js
+VITE_REACT_FILE_PATH=/react@18.3.1/react.production.min.js
+VITE_REACT_DOM_FILE_PATH=/react-dom@18.3.1/react-dom.production.min.js
