--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,12 +1,12 @@
 {
   "name": "app",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build:tsc": "tsc -b && vite build",
     "build": "vite build",
+    "build:tsc": "tsc -b && vite build",
+    "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -29,6 +29,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "5.4.11",
+    "vite-bundle-analyzer": "^0.22.3",
     "vite-plugin-externals": "^0.6.2"
   }
 }
